// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Language /> render correctly when flag is it 1`] = `
<div
  className="container"
>
  <ItalyFlag
    className="flag"
    key="vector-{vector}"
  />
  <p
    className="language"
  >
    Italian
  </p>
</div>
`;

exports[`<Language /> render correctly when flag is mk 1`] = `
<div
  className="container"
>
  <MecedonianFlag
    className="flag"
    key="vector-{vector}"
  />
  <p
    className="language"
  >
    Macedonian
  </p>
</div>
`;

exports[`<Language /> render correctly when flag is ru 1`] = `
<div
  className="container"
>
  <RussiaFlag
    className="flag"
    key="vector-{vector}"
  />
  <p
    className="language"
  >
    Russia
  </p>
</div>
`;

exports[`<Language /> render correctly when flag is uk 1`] = `
<div
  className="container"
>
  <UnitedKingdomFlag
    className="flag"
    key="vector-{vector}"
  />
  <p
    className="language"
  >
    English
  </p>
</div>
`;
